# jefferson

./: .env  .gitinore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
config/: api.py  settings.py  urls.py
livraria/: api.py  entities.py  repositories.py  repository.py  schemas.py
livraria/application/: dtos.py  use_cases.py
